Bug fix for stretched image sizing

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,6 +42,5 @@ figure {
 }
 
 img {
-    display: block;
-    width: 100%;
+    max-width: 100%;
 }
